# web3-smart-audits

./: .clinerules  .gitignore  README.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: admin-panel.tsx  page.tsx
app/analyze/: contract-analyzer.tsx  page.tsx
app/analyze/payment/: page.tsx  payment-form.tsx
app/analyze/results/: analysis-results.tsx  page.tsx
app/api/admin/: route.ts
app/api/auth/challenge/: route.ts
app/api/auth/session/: route.ts
app/api/auth/signin/: route.ts
app/api/auth/signout/: route.ts
app/api/payment/: route.ts
app/api/profile/: route.ts
app/api/run-audit/: route.ts
app/api/submit-contract/: route.ts
app/dashboard/: dashboard-content.tsx  page.tsx
app/marketplace/: marketplace-content.tsx  page.tsx
components/: footer.tsx  navbar.tsx  wallet-connect.tsx
components/animations/: fade-in.tsx  scale-in.tsx  slide-in.tsx  stagger-children.tsx
context/: auth-context.tsx
contracts/audit_registry/: Cargo.toml
contracts/audit_registry/src/: lib.rs
hardhat/: hardhat.config.ts
hardhat/artifacts/contracts/Lock.sol/: Lock.dbg.json  Lock.json
hardhat/cache/: solidity-files-cache.json
hardhat/contracts/: Lock.sol
hardhat/typechain-types/factories/: Lock__factory.ts
lib/: audit-engine.ts  auth.ts  db.ts  ethers-provider.ts  polkadot-contract.ts  prisma.ts  utils.tsx
prisma/: schema.prisma  seed.ts
prisma/migrations/20250427062241_add_auth_challenge/: migration.sql
